data/derived/comb/progs/unify/prog1288.ml.out
Characters 102-130:
  | 0 -> buildSine(build(rand,depth))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
